# ai-voice-detection-api

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
Docs/: API_GUIDE.md  ARCHITECTURE.md  AUDIO_FEATURES.md  HOW_IT_WORKS.md  PROJECT_OVERVIEW.md
core/: audio_processor.py
samples/: human_sample(Base64).txt
utils/: generate_base64.py  keep_alive.py
